play around with bootstrap colors

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -8,8 +8,13 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #27ae60;
+// Top navigation bar
+// -------------------------
 
+@navbar-default-bg:                 #ffffff;
+
+@navbar-default-link-active-bg:     #ffffff;
+@navbar-default-link-active-color:  #fa0;
 
 // Glyphicons path
 // -------------------------
