different link color

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -8,6 +8,11 @@
 // Brand colors
 // -------------------------
 
+// Link colors
+// -------------------------
+
+@link-color: #062;
+
 // Top navigation bar
 // -------------------------
 
