Add search box to the top navbar

--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -1,1 +1,14 @@
 .banner { }
+
+.search-form {
+  float: right;
+  display: inline-block;
+
+  .input-group {
+    height: 50px;
+
+    input {
+      margin-top: 8px;
+    }
+  }
+}
