add homepage, address and map location to attraction metadata

--- a/assets/less/layouts/_icons.less
+++ b/assets/less/layouts/_icons.less
@@ -1,4 +1,20 @@
-.star:before {
+.icon-map:before {
+	content: "\f230";
+	display: inline-block;
+	-webkit-font-smoothing: antialiased;
+	font: normal 20px/1 'dashicons';
+	vertical-align: top;
+}
+
+.icon-home:before {
+	content: "\f102";
+	display: inline-block;
+	-webkit-font-smoothing: antialiased;
+	font: normal 20px/1 'dashicons';
+	vertical-align: top;
+}
+
+.icon-star:before {
   color: yellow;
 	content: "\f155";
 	display: inline-block;
@@ -6,3 +22,4 @@
 	font: normal 20px/1 'dashicons';
 	vertical-align: top;
 }
+
