--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -18,5 +18,5 @@
 @import "layouts/_pages";            // Page styling
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
-
+@import "layouts/_attractions";      // Attractions
 @import "layouts/_icons";            // icon classes
