--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -1,7 +1,7 @@
 // Grid settings
 // -------------------------
 
-@main-sm-columns:       @grid-columns;
+@main-sm-columns:       12;
 @sidebar-sm-columns:    4;
 
 
