--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -4,7 +4,7 @@
 // Main content area
 .main {
   .make-sm-column(@main-sm-columns);
-  .sidebar-primary & {
-    .make-sm-column(@main-sm-columns - @sidebar-sm-columns);
-  }
+  // .sidebar-primary & {
+  //   .make-sm-column(@main-sm-columns - @sidebar-sm-columns);
+  // }
 }
