--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -4,9 +4,36 @@
 .hentry .entry-content { }
 .hentry footer { }
 
-img {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
+main {
+  font-family: 'Roboto Regular';
+  font-size: 1em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto Regular';
+}
+
+#single-post-header {
+  position: relative;
+
+  img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  h1 {
+    font-family: 'GreatVibes';
+    display: inline-block;
+    background: rgba(0,0,0,0.3);
+    font-size: 500%;
+    position: absolute;
+    color: #eee;
+    top: 25px;
+    left: 25px;
+    padding: 15px 50px;
+    border-radius: 5px;
+    margin: 0;
+  }
 }
