--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -8,6 +8,7 @@
 @import "_global";                   // Base styling & custom mixins
 @import "components/_buttons";       // Button tweaks
 @import "components/_comments";      // Comment styling
+@import "components/_fonts";         // Fonts
 @import "components/_forms";         // Form tweaks
 @import "components/_media";         // WordPress media
 @import "components/_wp-classes";    // WordPress generated classes
