Add links under the post image

--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -4,6 +4,7 @@
 .hentry .entry-content { }
 .hentry footer { }
 
+/* Basic font */
 main {
   font-family: 'Roboto Regular';
   font-size: 1em;
@@ -35,5 +36,16 @@ h1, h2, h3, h4, h5, h6 {
     padding: 15px 50px;
     border-radius: 5px;
     margin: 0;
+  }
+
+  .subheader-wikipedia {
+    float: right;
+  }
+}
+
+article {
+  padding: 50px;
+  .entry-content {
+
   }
 }
