Make use of bootstrap grid on post page

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -1,8 +1,12 @@
 // Grid settings
 // -------------------------
 
-@main-sm-columns:       12;
-@sidebar-sm-columns:    4;
+@article-sm-columns:       10;
+@article-md-columns:       9;
+@article-lg-columns:       10;
+@sidebar-sm-columns:       12;
+@sidebar-md-columns:       3;
+@sidebar-lg-columns:       2;
 
 
 // Link colors
