--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -44,8 +44,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 article {
-  padding: 50px;
+  padding: 50px 0;
+  .make-sm-column(@article-sm-columns);
+  .make-md-column(@article-md-columns);
+  .make-lg-column(@article-lg-columns);
+
   .entry-content {
 
+  }
+
+  .attraction-list {
+    
   }
 }
