--- a/assets/less/layouts/_sidebar.less
+++ b/assets/less/layouts/_sidebar.less
@@ -1,3 +1,5 @@
-.sidebar {
-  // .make-sm-column(@sidebar-sm-columns);
+aside.sidebar {
+  .make-sm-column(@sidebar-sm-columns);
+  .make-md-column(@sidebar-md-columns);
+  .make-lg-column(@sidebar-lg-columns);
 }
