Use different metadata on attraction & location

--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -38,8 +38,9 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
   }
 
-  .subheader-wikipedia {
+  .subheader-credit {
     float: right;
+    font-size: smaller;
   }
 }
 
