--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #single-post-header {
   position: relative;
+  margin-bottom: 50px;
 
   img {
     max-width: 100%;
@@ -45,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 article {
-  padding: 50px 0;
+
   .make-sm-column(@article-sm-columns);
   .make-md-column(@article-md-columns);
   .make-lg-column(@article-lg-columns);
