--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #single-post-header {
+  width: 100%;
   position: relative;
   margin-bottom: 50px;
 
@@ -22,21 +23,34 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 100%;
     width: 100%;
     height: auto;
+    overflow: hidden;
     margin: 0 auto;
   }
 
-  h1 {
-    font-family: 'GreatVibes';
-    display: inline-block;
-    background: rgba(0,0,0,0.3);
-    font-size: 500%;
+  .entry-title {
+    // font-family: 'GreatVibes';
+    // text-transform: lowercase;
+    text-align: center;
+    background: rgba(0,0,0,0.8);
     position: absolute;
-    color: #eee;
-    top: 25px;
-    left: 25px;
-    padding: 15px 50px;
-    border-radius: 5px;
+    color: white;
+    top: 3em;
+    left: 210px;
+    padding: 20px 20px;
     margin: 0;
+
+    h1 {
+      font-size: xx-large;
+      font-weight: bold;
+      margin-top: 0;
+    }
+
+    h2 {
+      margin: 0;
+      text-transform: uppercase;
+      font-size: xx-small;
+    }
+
   }
 
   .subheader-credit {
