Move locations from posts to pages, add home template

--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -1,5 +1,10 @@
-.home-page-header {
 
+body.page-template-template-home > header {
+  display: none;
+}
+
+
+.home-page-header {
 
   background-image: url('../img/c.jpg');
   background-position: center center;
