Layouting the home template

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -1,9 +1,14 @@
 // Grid settings
 // -------------------------
 
+@home-sm-columns:       12;
+@home-md-columns:       12;
+@home-lg-columns:       12;
+
 @article-sm-columns:       10;
 @article-md-columns:       9;
 @article-lg-columns:       10;
+
 @sidebar-sm-columns:       12;
 @sidebar-md-columns:       3;
 @sidebar-lg-columns:       2;
