--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -3,6 +3,15 @@ body.page-template-template-home > header {
   display: none;
 }
 
+body.page-template-template-home article {
+
+  .make-sm-column(@home-sm-columns);
+  .make-md-column(@home-md-columns);
+  .make-lg-column(@home-lg-columns);
+
+}
+
+
 
 .home-page-header {
 
