Styling the index page

--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -1,20 +1,49 @@
 
-body.page-template-template-home > header {
-  display: none;
+body.page-template-template-home {
+  &>header {
+    display: none;
+  }
+
+  div.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+
+    header {
+      padding: 0;
+    }
+  }
+  
 }
 
 .home-page-header {
 
-  background-image: url('../img/c.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  height: 300px;
-  max-height: 100%;
-  padding: 50px;
+  .make-sm-column(12);
+  .make-md-column(12);
+  .make-lg-column(12);
+
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    margin: 0 auto;
+  }
 
   #home-header-text {
+    text-align: center;
+    position: absolute;
+    top: 3em;
+
+    left: 3em;
+
+    @media screen and (max-width: @screen-sm-min) {
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
     background: rgba(0, 0, 0, 0.8);
     display: inline-block;
     padding: 15px;
@@ -25,13 +54,11 @@ body.page-template-template-home > header {
     padding: 0;
     margin: 0;
     font-size: 36px;;
-    text-align: center;
     color: white;
   }
 
   h2 {
     color: #ddd;
-    text-align: center;
     text-transform: uppercase;
     font-size: x-small;
     padding: 0;
