--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -76,18 +76,48 @@ body.page-template-template-home section {
 
 }
 
+body.page-template-template-home .entry-content {
+  padding-top: 25px;
+
+}
+
 body.page-template-template-home section {
 
   #recent-posts {
 
     list-style-type: none; 
+    padding: 0;
 
     li.recent-post-item {
       display: inline-block;
       float: left;
-      width: 30%;
+      width: 50%;
+      position: relative;
+
+      img {
+        width: 100%;
+        overflow: hidden;
+        // height: 100%;
+      }
+
+      span {
+        display: block;
+        color: white;
+        background: rgba(0, 0, 0, 0.8);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 15px 5px;
+        width: 100%;
+      }
 
     }
 
   }
+}
+
+body.page-template-template-home footer {
+  margin-top: 50px;
+  height: 50px;
+  border-top: 1px solid #ccc;
 }
