Organize pages and posts better in separate less & template files

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -5,9 +5,13 @@
 @home-md-columns:       12;
 @home-lg-columns:       12;
 
-@article-sm-columns:       10;
+@article-sm-columns:       12;
 @article-md-columns:       9;
-@article-lg-columns:       10;
+@article-lg-columns:       9;
+
+@article-sidebar-sm-columns:       12;
+@article-sidebar-md-columns:       3;
+@article-sidebar-lg-columns:       3;
 
 @sidebar-sm-columns:       12;
 @sidebar-md-columns:       3;
