Lay out the single post template, add the_title()

--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -16,6 +16,14 @@ h1, h2, h3, h4, h5, h6 {
 
 body.single-post {
 
+  #single-post-featured-image {
+    img {
+      // display: block;
+      margin: 0 auto;
+      width: 100%;
+      height: 100%;
+    }
+  }
   aside {
     .make-sm-column(@article-sidebar-sm-columns);
     .make-md-column(@article-sidebar-md-columns);
