--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -18,10 +18,11 @@ body.single-post {
 
   #single-post-featured-image {
     img {
-      // display: block;
+      display: block;
       margin: 0 auto;
       width: 100%;
       height: 100%;
+      max-width: 1170px;
     }
   }
   aside {
