--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -1,7 +1,11 @@
-// Content wrapper
-.wrap { }
-
-// Main content area
-.main {
-  
+/* Basic font */
+main {
+  font-family: 'Raleway';
+  // font-family: 'Roboto Regular';
+  font-size: 1em;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Raleway';
+}
+
