Tweak fonts, add Titillium

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -1,8 +1,7 @@
 /* Basic font */
 main {
-  font-family: 'Raleway';
-  // font-family: 'Roboto Regular';
-  font-size: 1em;
+  font-family: 'Roboto Regular';
+  font-size: 1.6em;
 }
 
 h1, h2, h3, h4, h5, h6 {
