--- a/assets/less/components/_fonts.less
+++ b/assets/less/components/_fonts.less
@@ -1,15 +1,15 @@
+
 @font-face {
   font-family: 'Raleway';
-  src: url('../fonts/Raleway-medium.ttf') format("truetype");
+  src: url('../fonts/Raleway-Medium.ttf') format("truetype");
 }
 
 @font-face {
-  font-family: 'Roboto Regular';
-  src: url('../fonts/Roboto-Regular.ttf') format("truetype");
+  font-family: 'Titillium Light';
+  src: url('../fonts/Titillium-ThinUpright.otf') format("opentype");
 }
 
 @font-face {
-  font-family: 'GreatVibes';
-  src: url('../fonts/GreatVibes-Regular.otf') format("opentype");
+  font-family: 'Titillium';
+  src: url('../fonts/Titillium-RegularUpright.otf') format("opentype");
 }
-
