--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -18,10 +18,6 @@ body.page-template-template-home {
 
     div {
 
-      /* The thumbnail maximum is 600px */
-      max-width: 600px;
-      margin: 0 auto;
-
       img {
         max-width: 100%;
         height: auto;
@@ -46,49 +42,11 @@ body.page-template-template-home {
 
     padding: 0;
 
-    @media(min-width: @screen-md) {
-      padding: 5px;
-      padding-left: 15px;
+    .google-large-rectangle {
+      background-color: #eef;
+      width: 336px;
+      height: 280px;
     }
-
-    h3 {
-      margin: 0;
-    }
-
-    ul {
-      list-style: none;
-      padding: 5px;
-
-      li {
-        padding: 10px 0 0 0;
-
-        a {
-          display: block;
-          padding: 0;
-        }
-
-        span.post-date {
-          font-size: small;
-          color: #ccc;
-        }
-      }
-    }
-  }
-
-  /*
-
-      Sidebar - left
-
-  */
-
-
-  aside.home-aside-left {
-    
-    /* home-aside-left is hidden on xs and sm */
-
-    .make-md-column(@home-md-aside-left-columns);
-    .make-lg-column(@home-lg-aside-left-columns);
-
   }
 
   /*
