--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -18,6 +18,12 @@ body.page-template-template-home {
 
     div {
 
+      width: 49%;
+      display: inline-block;
+
+      &.featured-item-1 {
+        width: 100%;
+      }
       img {
         max-width: 100%;
         height: auto;
