Cosmetic fixes to home page featured articles

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -1,11 +1,30 @@
 // Grid settings
 // -------------------------
 
+
+/* Posts */
+
+@post-article-sm-columns:       12;
+@post-article-md-columns:       9;
+@post-article-lg-columns:       9;
+
+@post-article-sidebar-sm-columns:       12;
+@post-article-sidebar-md-columns:       3;
+@post-article-sidebar-lg-columns:       3;
+
+/* Pages */
+
+@sidebar-sm-columns:       12;
+@sidebar-md-columns:       3;
+@sidebar-lg-columns:       2;
+
+/* Home page */
+
 @home-sm-aside-right-columns:       12;
-@home-sm-featured-columns:           12;
+@home-sm-featured-columns:          12;
 
 @home-md-aside-right-columns:       4;
-@home-md-featured-columns:           8;
+@home-md-featured-columns:          8;
 
 @home-lg-aside-right-columns:       4;
 @home-lg-featured-columns:          8;
@@ -13,20 +32,6 @@
 @home-sm-article-columns:          12;
 @home-md-article-columns:          12;
 @home-lg-article-columns:          12;
-
-
-
-@article-sm-columns:       12;
-@article-md-columns:       9;
-@article-lg-columns:       9;
-
-@article-sidebar-sm-columns:       12;
-@article-sidebar-md-columns:       3;
-@article-sidebar-lg-columns:       3;
-
-@sidebar-sm-columns:       12;
-@sidebar-md-columns:       3;
-@sidebar-lg-columns:       2;
 
 
 // Link colors
