--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -12,12 +12,21 @@
 @import "components/_forms";         // Form tweaks
 @import "components/_media";         // WordPress media
 @import "components/_wp-classes";    // WordPress generated classes
+
+/* General */
 @import "layouts/_general";          // General styling
-@import "layouts/_header";           // Header styling
-@import "layouts/_sidebar";          // Sidebar styling
-@import "layouts/_footer";           // Footer styling
-@import "layouts/_pages";            // Page styling
-@import "layouts/pages/_home";       // Home page styling
-@import "layouts/_posts";            // Post styling
-@import "layouts/_attractions";      // Attractions
 @import "layouts/_icons";            // icon classes
+
+/* Header & Footer */
+@import "layouts/_header";           // Header styling
+@import "layouts/_footer";           // Footer styling
+
+/* Pages */
+@import "layouts/_pages";            // Page styling
+@import "layouts/_sidebar";          // Sidebar styling
+@import "layouts/_attractions";      // Attractions
+
+@import "layouts/pages/_home";       // Home page styling
+
+/* Posts */
+@import "layouts/_posts";            // Post styling
