--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -76,9 +76,9 @@ body.page-template-template-home {
     padding: 0;
 
     .google-large-rectangle {
-      background-color: #eef;
-      width: 300px;
-      height: 600px;
+      // background-color: #eef;
+      // width: 300px;
+      // height: 600px;
     }
   }
 
