Show one featured item and four latest articles on the front page

--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -23,13 +23,14 @@ body.page-template-template-home {
       display: inline-block;
       margin: 0 0 15px 0;
 
-      &.featured-item-1 {
+      &.featured-item {
         width: 100%;
       }
 
-      &.featured-item-3 {
+      &.latest-article-right {
         float: right;
       }
+
       img {
         max-width: 100%;
         height: auto;
