Add image-title-box to articles

--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -7,6 +7,9 @@
 body.single-post {
 
   #single-post-featured-image {
+
+    position: relative;
+
     img {
       display: block;
       margin: 0 auto;
@@ -14,6 +17,7 @@ body.single-post {
       height: 100%;
       max-width: 1170px;
     }
+
   }
   aside {
     .make-sm-column(@post-article-sidebar-sm-columns);
@@ -38,5 +42,5 @@ body.single-post {
     .attraction-list {
 
     }
-}
+  }
 }
