--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -1,4 +1,30 @@
 
+/* Image-title-box is used on pages and posts */
+.image-title-box {
+  text-align: center;
+  background: rgba(0,0,0,0.8);
+  position: absolute;
+  color: white;
+  top: 3em;
+  left: 210px;
+  padding: 20px 20px;
+  margin: 0;
+
+  h1 {
+    font-size: xx-large;
+    font-weight: bold;
+    margin-top: 0;
+  }
+
+  h2 {
+    margin: 0;
+    text-transform: uppercase;
+    font-size: xx-small;
+  }
+
+}
+
+
 #single-page-header {
   width: 100%;
   position: relative;
@@ -10,30 +36,6 @@
     height: auto;
     overflow: hidden;
     margin: 0 auto;
-  }
-
-  .entry-title {
-    text-align: center;
-    background: rgba(0,0,0,0.8);
-    position: absolute;
-    color: white;
-    top: 3em;
-    left: 210px;
-    padding: 20px 20px;
-    margin: 0;
-
-    h1 {
-      font-size: xx-large;
-      font-weight: bold;
-      margin-top: 0;
-    }
-
-    h2 {
-      margin: 0;
-      text-transform: uppercase;
-      font-size: xx-small;
-    }
-
   }
 
   .subheader-credit {
