--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -8,3 +8,35 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Raleway';
 }
 
+
+/* Image-title-box is used on pages and posts */
+
+.image-title-box {
+  text-align: center;
+  background: rgba(0,0,0,0.8);
+  position: absolute;
+  color: white;
+  top: 3em;
+  left: 210px;
+  padding: 20px 20px;
+  margin: 0;
+
+  @media (max-width: @screen-md) {
+    left: 50%;
+    transition: translateX(-50%);
+  }
+
+  h1 {
+    font-size: xx-large;
+    font-weight: bold;
+    margin-top: 0;
+  }
+
+  h2 {
+    margin: 0;
+    text-transform: uppercase;
+    font-size: xx-small;
+  }
+
+}
+
