--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -17,13 +17,19 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   color: white;
   top: 3em;
-  left: 210px;
+  left: 100px;
   padding: 20px 20px;
   margin: 0;
 
   @media (max-width: @screen-md) {
     left: 50%;
-    transition: translateX(-50%);
+    transform: translateX(-50%);
+  }
+
+  @media (max-width: @screen-xs) {
+    position: relative;
+    top: 0;
+    padding: 5px 20px;
   }
 
   h1 {
