--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -9,13 +9,14 @@ body.single-post {
   #single-post-featured-image {
 
     position: relative;
+    max-width: 1170px;
+    margin: 0 auto;
 
     img {
       display: block;
       margin: 0 auto;
       width: 100%;
       height: 100%;
-      max-width: 1170px;
     }
 
   }
