Add some space below the picture on posts

--- a/assets/less/layouts/_posts.less
+++ b/assets/less/layouts/_posts.less
@@ -20,6 +20,11 @@ body.single-post {
     }
 
   }
+
+  div#single-post-content {
+    margin-top: 35px;
+  }
+
   aside {
     .make-sm-column(@post-article-sidebar-sm-columns);
     .make-md-column(@post-article-sidebar-md-columns);
@@ -36,12 +41,5 @@ body.single-post {
       margin-bottom: 25px;
     }
 
-    .entry-content {
-
-    }
-
-    .attraction-list {
-
-    }
   }
 }
