Use raleway as basic font

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -1,7 +1,7 @@
 /* Basic font */
 main {
-  font-family: 'Roboto Regular';
-  font-size: 1.4em;
+  font-family: 'Raleway';
+  font-size: 1.25em;
 }
 
 h1, h2, h3, h4, h5, h6 {
