--- a/assets/less/_bootstrap.less
+++ b/assets/less/_bootstrap.less
@@ -46,8 +46,8 @@
 
 // Reset
 @import "../vendor/bootstrap/less/normalize";
-@import "../vendor/bootstrap/less/print";
-@import "../vendor/bootstrap/less/glyphicons";
+// @import "../vendor/bootstrap/less/print";
+// @import "../vendor/bootstrap/less/glyphicons";
 
 // Core CSS
 @import "../vendor/bootstrap/less/scaffolding";
@@ -65,28 +65,30 @@
 @import "../vendor/bootstrap/less/input-groups";
 @import "../vendor/bootstrap/less/navs";
 @import "../vendor/bootstrap/less/navbar";
-@import "../vendor/bootstrap/less/breadcrumbs";
-@import "../vendor/bootstrap/less/pagination";
-@import "../vendor/bootstrap/less/pager";
-@import "../vendor/bootstrap/less/labels";
-@import "../vendor/bootstrap/less/badges";
-@import "../vendor/bootstrap/less/jumbotron";
-@import "../vendor/bootstrap/less/thumbnails";
-@import "../vendor/bootstrap/less/alerts";
-@import "../vendor/bootstrap/less/progress-bars";
-@import "../vendor/bootstrap/less/media";
-@import "../vendor/bootstrap/less/list-group";
-@import "../vendor/bootstrap/less/panels";
-@import "../vendor/bootstrap/less/responsive-embed";
-@import "../vendor/bootstrap/less/wells";
-@import "../vendor/bootstrap/less/close";
+
+// @import "../vendor/bootstrap/less/breadcrumbs";
+// @import "../vendor/bootstrap/less/pagination";
+// @import "../vendor/bootstrap/less/pager";
+// @import "../vendor/bootstrap/less/labels";
+// @import "../vendor/bootstrap/less/badges";
+// @import "../vendor/bootstrap/less/jumbotron";
+// @import "../vendor/bootstrap/less/thumbnails";
+// @import "../vendor/bootstrap/less/alerts";
+// @import "../vendor/bootstrap/less/progress-bars";
+// @import "../vendor/bootstrap/less/media";
+// @import "../vendor/bootstrap/less/list-group";
+// @import "../vendor/bootstrap/less/panels";
+// @import "../vendor/bootstrap/less/responsive-embed";
+// @import "../vendor/bootstrap/less/wells";
+// @import "../vendor/bootstrap/less/close";
 
 // Components w/ JavaScript
-@import "../vendor/bootstrap/less/modals";
-@import "../vendor/bootstrap/less/tooltip";
-@import "../vendor/bootstrap/less/popovers";
-@import "../vendor/bootstrap/less/carousel";
+// @import "../vendor/bootstrap/less/modals";
+// @import "../vendor/bootstrap/less/tooltip";
+// @import "../vendor/bootstrap/less/popovers";
+// @import "../vendor/bootstrap/less/carousel";
+
 
 // Utility classes
 @import "../vendor/bootstrap/less/utilities";
-@import "../vendor/bootstrap/less/responsive-utilities";
+// @import "../vendor/bootstrap/less/responsive-utilities";
