Add space to the article <p> and <h2>, bigger line-height

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -2,10 +2,19 @@
 main {
   font-family: 'Raleway';
   font-size: 1.25em;
+  line-height: 1.8em;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Raleway';
+}
+
+p {
+  margin-bottom: 30px;
+}
+
+h2 {
+  margin: 25px 0 20px;
 }
 
 
