Add more structure on embedded attractions

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -1,4 +1,4 @@
-/* Basic font */
+
 main {
   font-family: 'Raleway';
   font-size: 1.25em;
@@ -17,6 +17,10 @@ h2 {
   margin: 25px 0 20px;
 }
 
+
+.clear {
+  clear: both;
+}
 
 /* Image-title-box is used on pages and posts */
 
@@ -58,4 +62,11 @@ h2 {
 .post-caption {
   float: right;
   font-size: small;
+}
+
+article {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
