Start replacing bootstrap with Skeleton

--- a/assets/less/layouts/_attractions.less
+++ b/assets/less/layouts/_attractions.less
@@ -4,12 +4,12 @@
   }
 
   .attraction-address {
-    color: @gray-light;
-    font-size: @font-size-small;
+    // color: @gray-light;
+    // font-size: @font-size-small;
   }
 
   .attraction-link {
-    color: @gray-base;
+    // color: @gray-base;
   }
 }
 
