--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -49,16 +49,16 @@ body.page {
       padding: 20px 20px;
       margin: 0;
 
-      @media (max-width: @screen-md) {
-        left: 50%;
-        transform: translateX(-50%);
-      }
-
-      @media (max-width: @screen-xs) {
-        position: relative;
-        top: 0;
-        padding: 5px 20px;
-      }
+      // @media (max-width: @screen-md) {
+      //   left: 50%;
+      //   transform: translateX(-50%);
+      // }
+      //
+      // @media (max-width: @screen-xs) {
+      //   position: relative;
+      //   top: 0;
+      //   padding: 5px 20px;
+      // }
 
       h1 {
         font-size: xx-large;
@@ -80,16 +80,16 @@ body.page {
   }
 
   aside {
-    .make-sm-column(@post-article-sidebar-sm-columns);
-    .make-md-column(@post-article-sidebar-md-columns);
-    .make-lg-column(@post-article-sidebar-lg-columns);
+    // .make-sm-column(@post-article-sidebar-sm-columns);
+    // .make-md-column(@post-article-sidebar-md-columns);
+    // .make-lg-column(@post-article-sidebar-lg-columns);
   }
 
   article {
 
-    .make-sm-column(@post-article-sm-columns);
-    .make-md-column(@post-article-md-columns);
-    .make-lg-column(@post-article-lg-columns);
+    // .make-sm-column(@post-article-sm-columns);
+    // .make-md-column(@post-article-md-columns);
+    // .make-lg-column(@post-article-lg-columns);
 
     h1 {
       margin-bottom: 25px;
