--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -8,13 +8,13 @@ body.page-template-template-home {
 
   section.featured-post {
 
-    .make-sm-column(@home-sm-featured-columns);
-    .make-md-column(@home-md-featured-columns);
-    .make-lg-column(@home-lg-featured-columns);
-
-    @media(max-width: @screen-md) {
-      padding: 0;
-    }
+    // .make-sm-column(@home-sm-featured-columns);
+    // .make-md-column(@home-md-featured-columns);
+    // .make-lg-column(@home-lg-featured-columns);
+    //
+    // @media(max-width: @screen-md) {
+    //   padding: 0;
+    // }
 
     div {
 
@@ -70,9 +70,9 @@ body.page-template-template-home {
   */
 
   aside.home-aside-right {
-    .make-sm-column(@home-sm-aside-right-columns);
-    .make-md-column(@home-md-aside-right-columns);
-    .make-lg-column(@home-lg-aside-right-columns);
+    // .make-sm-column(@home-sm-aside-right-columns);
+    // .make-md-column(@home-md-aside-right-columns);
+    // .make-lg-column(@home-lg-aside-right-columns);
 
     padding: 0;
 
@@ -91,9 +91,9 @@ body.page-template-template-home {
 
   section.articles {
 
-    .make-sm-column(@home-sm-article-columns);
-    .make-md-column(@home-md-article-columns);
-    .make-lg-column(@home-lg-article-columns);
+    // .make-sm-column(@home-sm-article-columns);
+    // .make-md-column(@home-md-article-columns);
+    // .make-lg-column(@home-lg-article-columns);
 
     margin-top: 25px;
 
