--- a/assets/less/layouts/_sidebar.less
+++ b/assets/less/layouts/_sidebar.less
@@ -1,7 +1,7 @@
 aside.sidebar {
-  .make-sm-column(@sidebar-sm-columns);
-  .make-md-column(@sidebar-md-columns);
-  .make-lg-column(@sidebar-lg-columns);
+  // .make-sm-column(@sidebar-sm-columns);
+  // .make-md-column(@sidebar-md-columns);
+  // .make-lg-column(@sidebar-lg-columns);
 
   h1,h2,h3 {
     margin: 0;
