--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,17 +1,5 @@
-// Bootstrap
-@import "_bootstrap";
-
-// Variable overrides and custom variables
-@import "_variables";
-
-// Roots
-@import "_global";                   // Base styling & custom mixins
-@import "components/_buttons";       // Button tweaks
-@import "components/_comments";      // Comment styling
-@import "components/_fonts";         // Fonts
-@import "components/_forms";         // Form tweaks
-@import "components/_media";         // WordPress media
-@import "components/_wp-classes";    // WordPress generated classes
+/* Skeleton */
+@import "_skeleton";
 
 /* General */
 @import "layouts/_general";          // General styling
