--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -3,6 +3,7 @@
 
 /* General */
 @import "layouts/_general";          // General styling
+@import "layouts/_fonts";            // Font definitions
 @import "layouts/_icons";            // icon classes
 
 /* Header & Footer */
