--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -42,23 +42,28 @@ body.page {
     .image-title-box {
       text-align: center;
       background: rgba(0,0,0,0.8);
-      position: absolute;
       color: white;
-      top: 3em;
-      left: 100px;
-      padding: 20px 20px;
       margin: 0;
 
-      // @media (max-width: @screen-md) {
-      //   left: 50%;
-      //   transform: translateX(-50%);
-      // }
-      //
-      // @media (max-width: @screen-xs) {
-      //   position: relative;
-      //   top: 0;
-      //   padding: 5px 20px;
-      // }
+      position: relative;
+      top: 0;
+      left: 0;
+      padding: 5px 20px;
+
+      @media (min-width: @bp-larger-than-phablet) {
+        padding: 20px 20px;
+        position: absolute;
+        top: 3em;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+      }
+
+      @media (min-width: @bp-larger-than-tablet) {
+        position: absolute;
+        left: 100px;
+        transform: none;
+      }
 
       h1 {
         font-size: xx-large;
