Moving to skeleton, part 2

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -85,16 +85,10 @@ body.page {
   }
 
   aside {
-    // .make-sm-column(@post-article-sidebar-sm-columns);
-    // .make-md-column(@post-article-sidebar-md-columns);
-    // .make-lg-column(@post-article-sidebar-lg-columns);
+    background: lightblue;
   }
 
   article {
-
-    // .make-sm-column(@post-article-sm-columns);
-    // .make-md-column(@post-article-md-columns);
-    // .make-lg-column(@post-article-lg-columns);
 
     h1 {
       margin-bottom: 25px;
