--- a/assets/less/_skeleton.less
+++ b/assets/less/_skeleton.less
@@ -51,9 +51,9 @@
 @font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Grid Variables
-@container-width: 960px;
-@container-width-larger-than-mobile: 85%;
-@container-width-larger-than-phablet: 80%;
+@container-width: 1140px;
+@container-width-larger-than-mobile: 95%;
+@container-width-larger-than-phablet: 90%;
 @total-columns: 12;
 @column-width: 100 / @total-columns; // calculates individual column width based off of # of columns
 @column-margin: 4%; // space between columns
@@ -98,7 +98,7 @@
 }
 
 /* For devices larger than 550px */
-@media (min-width: @bp-larger-than-phablet) {
+@media (min-width: @bp-larger-than-tablet) {
   .container {
     width: @container-width-larger-than-phablet;
   }
