Fix home page to skeleton

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -11,7 +11,7 @@
 @import "layouts/_footer";           // Footer styling
 
 /* Pages */
-@import "layouts/_pages";            // Page styling
+@import "layouts/_pages";            // Extra page styling
 @import "layouts/_sidebar";          // Sidebar styling
 @import "layouts/_attractions";      // Attractions
 
