--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -1,3 +1,7 @@
+body {
+  padding: 0;
+  margin: 0;
+}
 
 main {
   font-family: 'Raleway';
@@ -24,6 +28,17 @@ img {
 
 .clear {
   clear: both;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
 }
 
 body.single-post,
