Fix: kuvat artikkelien sisällä

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -113,6 +113,12 @@ body.page {
       margin-bottom: 25px;
     }
 
+    figure {
+      max-width: 100%;
+      height: auto;
+      margin: 18px auto;
+    }
+
   }
 }
 
