--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -133,7 +133,7 @@ body.page {
 .post-caption {
   display: block;
   text-align: right;
-  font-size: small;
+  font-size: x-small;
 }
 
 article {
