--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -64,7 +64,11 @@ body.page {
       position: relative;
       top: 0;
       left: 0;
-      padding: 5px 20px;
+      padding: 5px 0;
+
+      @media (min-width: @bp-larger-than-phablet) {
+        padding: 5px 20px;
+      }
 
       h1 {
         font-size: xx-large;
