Fix homepage latest articles

--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -25,7 +25,7 @@ body.page-template-template-home {
         margin-bottom: 5px;
       }
 
-      &.latest-article:nth-child(even) {
+      &.latest-article:nth-of-type(2n+1) {
         float: right;
       }
 
