Tweak links and colors

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -21,6 +21,14 @@ h2 {
   margin: 25px 0 20px;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 img {
   display: block;
 }
