--- a/assets/less/_skeleton.less
+++ b/assets/less/_skeleton.less
@@ -44,7 +44,7 @@
 @primary-color: #33c3f0;
 @secondary-color: lighten(@dark-grey, 13.5%);
 @border-color: #bbb;
-@link-color: #1eaedb;
+@link-color: #1b9cc5;
 @font-color: #222;
 
 // Typography
