Add related articles in the attraction page

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -7,16 +7,12 @@
 @import "layouts/_fonts";            // Font definitions
 @import "layouts/_icons";            // icon classes
 
-/* Header & Footer */
 @import "layouts/_header";           // Header styling
 @import "layouts/_footer";           // Footer styling
+@import "layouts/_sidebar";          // Sidebar styling
 
 /* Pages */
 @import "layouts/_pages";            // Extra page styling
-@import "layouts/_sidebar";          // Sidebar styling
-@import "layouts/_attractions";      // Attractions
 
+/* Home */
 @import "layouts/pages/_home";       // Home page styling
-
-/* Posts */
-@import "layouts/_posts";            // Post styling
