--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -33,6 +33,9 @@ img {
   display: block;
 }
 
+ul {
+  list-style: none;
+}
 
 .clear {
   clear: both;
@@ -49,110 +52,9 @@ img {
     border: 0;
 }
 
-body.single-post,
-body.single-attraction,
-body.page {
-
-  .article-featured-image {
-
-    position: relative;
-    max-width: 1170px;
-    margin: 0 auto;
-
-    img {
-      display: block;
-      margin: 0 auto;
-      width: 100%;
-      height: 100%;
-    }
-
-    .image-title-box {
-      margin: 0;
-
-      position: relative;
-      top: 0;
-      left: 0;
-      padding: 5px 0;
-
-      @media (min-width: @bp-larger-than-phablet) {
-        padding: 5px 20px;
-      }
-
-      h1 {
-        font-size: xx-large;
-        font-weight: bold;
-        margin: 0 0 5px 0;
-      }
-
-      h2 {
-        margin: 0;
-        text-transform: uppercase;
-        font-size: small;
-      }
-
-      @media (min-width: @bp-larger-than-phablet) {
-
-        text-align: center;
-        background: rgba(0,0,0,0.8);
-        color: white;
-
-        padding: 20px 20px;
-        position: absolute;
-        top: 3em;
-        left: 50%;
-        transform: translateX(-50%);
-        color: white;
-
-        h2 {
-          margin: 0;
-          text-transform: uppercase;
-          font-size: small;
-        }
-      }
-
-      @media (min-width: @bp-larger-than-tablet) {
-        position: absolute;
-        left: 100px;
-        transform: none;
-      }
-
-    }
-  }
-
-  div.article-content {
-    margin-top: 35px;
-  }
-
-  aside {
-    // background: lightblue;
-  }
-
-  article {
-
-    h1 {
-      margin-bottom: 25px;
-    }
-
-    figure {
-      max-width: 100%;
-      height: auto;
-      margin: 18px auto;
-    }
-
-  }
-}
-
 .post-caption {
   display: block;
   text-align: right;
   font-size: x-small;
 }
 
-article {
-  img {
-    width: 100%;
-    max-width: 100%;
-
-    height: auto;
-  }
-}
