--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -94,9 +94,19 @@ body.page {
   */
 
   .related-links {
-    img {
-      max-width: 33%;
-      height: auto;
+
+    li {
+      width: 49%;
+      float: left;
+
+      &:nth-of-type(2n) {
+        float: right;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 }
